frontend/public/assets/css/main.css
/* ... */
._feed_right_inner_area_card_form_inpt:focus::placeholder {
    -webkit-transition: .2s all ease;
    -o-transition: .2s all ease;
    transition: .2s all ease;
    opacity: 0;
}
._feed_right_inner_area_card_ppl {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    margin:0 0 24px 0;
    padding: 6px;
    border-radius: 8px;
    -webkit-transition:.2s all ease;
    -o-transition:.2s all ease;
    transition:.2s all ease;
}
._feed_right_inner_area_card_ppl:hover {
    background: #e4e6e9;
}
._feed_right_inner_area_card_ppl_box {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}
._feed_right_inner_area_card_ppl_image {
    margin: 0 16px 0 0;
}
._box_ppl_img {
    max-width: 40px;
    border-radius: 50%;
    height: 40px;
    -o-object-fit: cover;
    object-fit: cover;
}
._feed_right_inner_area_card_ppl_title {
    font-weight: 500;
    font-size: 14px;
    line-height: 1.4;
    color: var(--color6);
}
._feed_right_inner_area_card_ppl_para {
    font-weight: 300;
    font-size: 11px;
    line-height: 1.4;
    color: var(--color6);
}
._feed_right_inner_area_card_ppl_side span {
    font-weight: normal;
    font-size: 11px;
    line-height: 21px;
    color: rgba(0, 0, 0, 0.46);
}
._feed_right_inner_area_card_ppl_side_txt {
    font-size: 14px !important;
}
._feed_inner_profile_story_image {
    position: relative;
    z-index: 2;
}
._profile_story_img {
    border-radius: 6px;
}
._profile_wrapper {
    padding: 80px 0 0;
}
._feed_inner_profile_story_image::before {
    content: "";
    position: absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
    background: #000000;
    opacity: 0.5;
    border-radius: 6px;
    z-index: 1;
}
._feed_inner_story_txt {
    background: #112032;
    border-radius: 25.5px 25.5px 6px 6px;
    padding: 30px 0 0;
    z-index: 1;
    position: absolute;
    bottom: 0;
    width: 100%;
}
._feed_inner_profile_story {
    cursor:pointer;
    -webkit-transition:.2s all ease;
    -o-transition:.2s all ease;
    transition:.2s all ease;
}
._feed_inner_story_para {
    text-align: center;
    color: #fff;
    font-size: 12px;
    margin: 0 0 10px;
    line-height: 19px;
    font-weight: 500;
}
._feed_inner_story_btn {
    position: absolute;
    top: -12px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
}
._feed_inner_story_btn_link {
    background: var(--color5);
    border: 2px solid #112032;
    border-radius: 40px;
    width: 32px;
    height:32px;
}
._public_story_img {
    border-radius: 6px;
}
._feed_inner_public_story{
    overflow: hidden;
    cursor: pointer;
    -webkit-transition: .2s all ease;
    -o-transition: .2s all ease;
    transition: .2s all ease;
}
._feed_inner_public_story_image {
    position: relative;
    z-index: 2;
}
._feed_inner_public_story:hover ._feed_inner_public_story_image::before{
    opacity:.7;
}
._feed_inner_public_story_image::before {
    content: "";
    position: absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
    background: #000000;
    opacity: 0.5;
    border-radius: 6px;
    z-index: 1;
    -webkit-transition:.2s all ease;
    -o-transition:.2s all ease;
    transition:.2s all ease;
}
._feed_inner_pulic_story_txt {
    z-index: 1;
    position: absolute;
    bottom: 0;
    width: 100%;
}
._feed_inner_pulic_story_para {
    text-align: center;
    color: #fff;
    font-size: 12px;
    margin: 0 0 10px;
    line-height: 19px;
    font-weight: 500;
}
._feed_inner_public_mini {
    position: absolute;
    top: 12px;
    z-index: 1;
    right: 12px;
}
._public_mini_img {
    background: var(--color3);;
    border: 2px solid var(--bg2);
    border-radius: 40px;
    max-width: 28px;
}
._feed_inner_ppl_card {
    position: relative;
}
._feed_inner_story_arrow_btn {
    background: var(--color5);
    border: 1px solid var(--bg1);
    border-radius: 40px;
    width: 24px;
    height: 24px;
    padding: 0 7px;
}
._feed_inner_story_arrow_btn svg {
    margin: -2px 0 0 0;
}
._feed_inner_story_arrow {
    position: absolute;
    top: 50%;
    right: -5px;
    z-index: 18;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}
._feed_inner_text_area_box_image {
    cursor:pointer;
}
._txt_img {
    max-width: 40px;
    border-radius: 50%;
    padding:1px;
}
._feed_inner_text_area {
    background: var(--bg2);
    -webkit-transition:.2s all ease;
    -o-transition:.2s all ease;
    transition:.2s all ease;
}
._feed_inner_text_area_box {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: start;
        -ms-flex-align: start;
            align-items: start;
}
._feed_inner_text_area_box_form textarea {
    width: 100%;
    height: calc(86px + 2px) !important;
    border: none;
    padding: 8px !important;
}
._feed_inner_text_area_bottom {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    padding: 8px 15px;
    background: rgba(24, 144, 255, 0.05);
    border-radius: 0px 0px 6px 6px;
    min-height: 48px;
    margin: 10px 0 0 0;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    flex-wrap: nowrap;
    gap: 8px;
}
._feed_inner_text_area_item {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}
/* ... */

